[package]
name = "liovr-openxr"
version = "0.1.0"
edition = "2021"
authors = ["sceext <sceext@foxmail.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/liovr/liovr-openxr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
